correction text-align

--- a/src/app/features/welcome/containers/welcome/welcome.component.scss
+++ b/src/app/features/welcome/containers/welcome/welcome.component.scss
@@ -1,3 +1,4 @@
 ion-header {
     margin-top:15px;
+    text-align: center;
 }
